# odra_tutorials

./: README.md
counter/: .gitignore  CHANGELOG.md  Cargo.toml  Odra.toml  README.md
donation/: CHANGELOG.md  Cargo.toml  README.md  tutorial.md
donation/src/: lib.rs
election/: CHANGELOG.md  Cargo.toml  README.md  tutorial.md
election/src/: lib.rs
escrow/: CHANGELOG.md  Cargo.toml  Odra.toml  README.md  tutorial.md
escrow/src/: escrow.rs  lib.rs
fondant_x_odra/: CHANGELOG.md  Cargo.toml  README.md  tutorial.md
nft_zero_to_hero/part1/: README.md  tutorial.md
nft_zero_to_hero/part1/cep78/: CHANGELOG.md  Cargo.toml  Odra.toml  README.md
nft_zero_to_hero/part1/cep78/src/: lib.rs
nft_zero_to_hero/part2/: README.md  tutorial.md
nft_zero_to_hero/part2/cep78/: .gitignore  CHANGELOG.md
nft_zero_to_hero/part2/cep78/src/: lib.rs
nft_zero_to_hero/part3/: tutorial.md
nft_zero_to_hero/part3/auctions/: CHANGELOG.md  Cargo.toml  Odra.toml  README.md
nft_zero_to_hero/part3/auctions/src/: auctions.rs  lib.rs
recoverable_wallet/: CHANGELOG.md  Cargo.toml  README.md  tutorial.md
recoverable_wallet/src/: lib.rs  recoverable_wallet.rs
