[package]
name = "fondant_x_odra"
version = "0.1.0"
edition = "2021"

[dependencies]
odra = { version = "1.0.0", features = [], default-features = false }
odra-casper-livenet-env = { version = "1.0.0", optional = true }
reqwest = { version = "0.12.4", features = ["json", "blocking"] }
serde_json = "1.0.117"

[dev-dependencies]
odra-test = { version = "1.0.0", features = [], default-features = false }

[build-dependencies]
odra-build = { version = "1.0.0", features = [], default-features = false }

[features]
default = []
livenet = ["odra-casper-livenet-env"]

[[bin]]
name = "fondant_x_odra_build_contract"
path = "bin/build_contract.rs"
test = false

[[bin]]
name = "fondant_x_odra_build_schema"
path = "bin/build_schema.rs"
test = false

[[bin]]
name = "livenet"
path = "bin/livenet.rs"
required-features = ["livenet"]
test = false

[[bin]]
name = "fetch_keys"
path = "bin/fetch_keys.rs"
test = false

[profile.release]
codegen-units = 1
lto = true

[profile.dev.package."*"]
opt-level = 3
